--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,56 @@
-<h2>Sign up</h2>
+<h2 style="text-align: center;">Inscription</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs container1">
+    <div class="form-row">
+      <div class="form-group col-md-6">
     <%= f.input :nom,
                 required: true,
                 length: { minimum: 2 },
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "family-name" }%>
+      </div>
+      <div class="form-group col-md-6">
     <%= f.input :prenom,
                 required: true,
                 length: { minimum: 2 },
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "given-name" }%>
+      </div>
+  </div>
+  <div class="form-group">
     <%= f.input :adresse,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "street-address" }%>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
     <%= f.input :city,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "city" }%>
+    </div>
+    <div class="form-group col-md-2">
     <%= f.input :code_postal,
                 required: true,
                 numericality: { only_integer: true },
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "postal-code" }%>
+    </div>
+    <div class="form-group col-md-4">
     <%= f.input :telephone,
                 required: true,
                 length: { is: 10 },
                 numericality: { only_integer: true },
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "tel-national" }%>
+    </div>
+  </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
     <%= f.input :email,
                 required: true,
                 uniqueness: true,
@@ -40,22 +58,33 @@
                 confirmation: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
+      </div>
+      <div class="form-group col-md-6">
     <%= f.input :email_confirmation,
                 required: true,
                 input_html: { autocomplete: "email" } %>
+      </div>
+  </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
+      </div>
+      <div class="form-group col-md-6">
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+      </div>
+  </div>
+  <div class="form-group">
     <%= f.input :birthday,
                 required: false,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "birthday" }%>
   </div>
-
+</div>
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
   </div>
