--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs container1">
     <%= f.input :email, required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -23,6 +23,62 @@
                 input_html: { autocomplete: "given-name" }%>
       </div>
     </div>
+    <div class="form-group">
+    <%= f.input :adresse,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "street-address" }%>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+    <%= f.input :city,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "city" }%>
+    </div>
+    <div class="form-group col-md-2">
+    <%= f.input :code_postal,
+                required: false,
+                numericality: { only_integer: true },
+                autofocus: true,
+                input_html: { autocomplete: "postal-code" }%>
+    </div>
+    <div class="form-group col-md-4">
+    <%= f.input :telephone,
+                required: false,
+                length: { is: 10 },
+                numericality: { only_integer: true },
+                autofocus: true,
+                input_html: { autocomplete: "tel-national" }%>
+    </div>
+  </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+    <%= f.input :password,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "new-password" } %>
+      </div>
+      <div class="form-group col-md-6">
+    <%= f.input :current_password,
+                hint: "we need your current password to confirm your changes",
+                required: true,
+                input_html: { autocomplete: "current-password" } %>
+      </div>
+    </div>
+    <div class="form-group">
+    <%= f.input :current_password,
+                hint: "we need your current password to confirm your changes",
+                required: true,
+                input_html: { autocomplete: "current-password" } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :birthday,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "birthday" }%>
+  </div>
+    <!-- <div class="form-group">
     <%= f.input :adresse,
                 required: false,
                 autofocus: true,
@@ -54,15 +110,19 @@
                 required: false,
                 autofocus: true,
                 input_html: { autocomplete: "birthday" }%>
-  </div>
+  </div> -->
 
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
   </div>
+</div>
 <% end %>
-
+<div class="container1">
+  <div class="form-row">
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+  </div>
+</div>
