--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <h2 style="text-align: center;">Inscription</h2>
-
+<br>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -84,10 +84,11 @@
                 autofocus: true,
                 input_html: { autocomplete: "birthday" }%>
   </div>
-</div>
+  <div class="form-row">
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "S'inscrire" %>
   </div>
+</div>
 <% end %>
-
 <%= render "devise/shared/links" %>
+</div>
