--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,3 +1,4 @@
+
 .footer {
   background: #F4F4F4;
   display: flex;
@@ -7,8 +8,8 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   position: absolute;
+  bottom: 0;
   width: 100%; height: 50px;
-  bottom: 0; left: 0; right: 0;
 }
 .footer-links {
   display: flex;
