--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,6 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <%= render 'shared/footer' %>
+    <%= render 'shared/searchbar' %>
   </body>
 </html>
