--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,11 +1,16 @@
 <div class="search__container">
     <p class="search__title">
-        Go ahead, hover over search
+        Je trouve mon practicien
     </p>
-    <input class="search__input" type="text" placeholder="Search">
-    <input class="search__input" type="text" placeholder="Search">
+    <div class="searchbar">
+        <input class="search__input" type="text" placeholder="Practicien">
+        <input class="search__input" type="text" placeholder="Localisation">
+        <button type="submit"><i class="fa fa-search"></i></button>
+    </div>
 </div>
 
 <div class="credits__container">
-    <p class="credits__text">Background color: Pantone Color of the Year 2016</p>
+    <p class="credits__text">Une nouvelle approche de la médecine</p>
+    <p class="credits__secte">On aime les médecins un peu chelou (oui nous sommes une secte)</p>
+</div>
 </div>
