--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -16,3 +16,8 @@
     <% end %>
   <% end %>
 </div>
+
+
+ <div class="block_image">
+          <%= cl_image_tag cabinet.photo.key %>
+        </div>
