--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -1,18 +1,17 @@
-<!-- <div>
-  <%= week_calendar(number_of_weeks: 1) do |date| %>
+<div>
+  <%= calendar(number_of_days: 7) do |date| %>
     <%= date %>  Enlever cette ligne
     <% hour = 8 %>
     <% 10.times do %>
       <div>
         <p><%= hour %>h - <%= hour + 1 %>h</p>
-         <%= simple_form_for { @reservation, @cabinet } %>
-            <%= f.input :start_time %>
+         <%= simple_form_for [ @cabinet, @reservation ] do |f| %>
+            <%= f.input :start_time, as: :hidden, input_html: { value: date.to_datetime + hour.hours }%>
+            <%= f.input :end_time, as: :hidden, input_html: { value: date.to_datetime + (hour + 1).hours } %>
+            <%= f.submit "Réserver", class: "btn btn-primary" %>
         <% end %>
-          simple_form @reservation & @cabinet
-          f.input :start_time
-          f.input :end_time
       </div>
       <% hour += 1 %>
     <% end %>
   <% end %>
-</div> -->
+</div>
