--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,16 @@
 <h1> Une autre approche de la médecine </h1>
 
 
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="https://picsum.photos/400/300" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+
 
 <% link_to 'Cat1', '#' %>
 <% link_to 'Cat2', '#' %>
