--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,18 @@
-<h1> Une autre approche de la médecine </h1>
 
+<div class="container-home">
+<div class="home-banner">
+  <h1>Avec Parallel, une autre vision de la médecine</h1>
+  <p> Avec Parallel, une autre vision de la médecineAvec Parallel, une autre vision de la médecine </p>
+  <div class="search-bar-home">
+    <h2> Je trouve mon practicien </h2>
+  <% link_to 'searchbar', '#' %>
 
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="https://picsum.photos/400/300" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
 </div>
+ <div class="boutons-home">
+  <a class="btn btn-2">ENERGIES</a>
+  <a class="btn btn-3">CORPS ESPRIT</a>
+    <h2> Découvrez de nouvelles pratiques en toute confiance avec Parallel</h2>
 
-
-
-<% link_to 'Cat1', '#' %>
-<% link_to 'Cat2', '#' %>
+</div>
+ </div>
+</div>
