--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,14 +5,13 @@
   <p> Avec Parallel, une autre vision de la médecineAvec Parallel, une autre vision de la médecine </p>
   <div class="search-bar-home">
     <h2> Je trouve mon practicien </h2>
-  <% link_to 'searchbar', '#' %>
+<%= render 'shared/searchbar' %>
+  <h3> Découvrez de nouvelles pratiques en toute confiance avec Parallel</h3>
 
 </div>
  <div class="boutons-home">
-  <a class="btn btn-2">ENERGIES</a>
-  <a class="btn btn-3">CORPS ESPRIT</a>
-    <h2> Découvrez de nouvelles pratiques en toute confiance avec Parallel</h2>
-
+  <a class="btn-home btn-2">ENERGIES</a>
+  <a class="btn-home btn-3">CORPS ESPRIT</a>
 </div>
  </div>
 </div>
