--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -1,16 +1,34 @@
 <div>
   <%= calendar(number_of_days: 7) do |date| %>
-    <%= date %>  Enlever cette ligne
+    <%= date %>
     <% hour = 8 %>
     <% 10.times do %>
-      <div>
-        <p><%= hour %>h - <%= hour + 1 %>h</p>
-         <%= simple_form_for [ @cabinet, @reservation ] do |f| %>
-            <%= f.input :start_time, as: :hidden, input_html: { value: date.to_datetime + hour.hours }%>
-            <%= f.input :end_time, as: :hidden, input_html: { value: date.to_datetime + (hour + 1).hours } %>
-            <%= f.submit "Réserver", class: "btn btn-primary" %>
-        <% end %>
-      </div>
+        <button type="button" class="btn btn-light calendarbutton" data-toggle="modal" data-target="#exampleModal-<%= date %>-<%= hour %>"><p><%= hour %>h - <%= hour + 1 %>h</p></button>
+        <div class="modal fade" id="exampleModal-<%= date %>-<%= hour %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Confirmation de Rendez-vous</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>Rendez-vous le <%= date %> à <%= hour %>h</p>
+                <p>Au Cabinet <%= @cabinet.name %></p>
+                <p>Adresse : <%= @cabinet.adresse_cabinet %> <%= @cabinet.cp_cabinet %></p>
+                <p>Telephone : <%= @cabinet.telephone %></p>
+              </div>
+              <div class="modal-footer">
+                <%= simple_form_for [ @cabinet, @reservation ] do |f| %>
+                  <%= f.input :start_time, as: :hidden, input_html: { value: date.to_datetime + hour.hours }%>
+                  <%= f.input :end_time, as: :hidden, input_html: { value: date.to_datetime + (hour + 1).hours } %>
+                  <%= f.submit 'Confirmer' %>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
       <% hour += 1 %>
     <% end %>
   <% end %>
