ajout du style + footer sur le bas de page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <%= link_to "PARALLEL", '/', class: "nav-link" %>
+      <%= link_to "PARALLEL", '/', class: "nav-parallel" %>
     <ul class="navbar-nav">
 
       <% if user_signed_in? %>
