--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,6 +16,13 @@
   flex-direction: row;
 }
 
-.navbar a {
+.nav-parallel {
   color: rgba(0, 0, 0, 0.5);
+  font-size: 35px;
+  padding-left: 10px;
+}
+
+.nav-parallel:hover {
+  text-decoration: none;
+  color: black;
 }
