--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,12 @@
 
 </div>
  <div class="boutons-home">
-  <a class="btn-home btn-2">ENERGIES</a>
-  <a class="btn-home btn-3">CORPS ESPRIT</a>
+
+  <a href="/categories/1/activities" class="btn-home btn-2">ENERGIES</a>
+  <a href="/categories/2/activities" class="btn-home btn-3">ESPRITS</a>
+
+</div>
+
 </div>
  </div>
 </div>
