--- a/app/assets/stylesheets/components/_boutons.scss
+++ b/app/assets/stylesheets/components/_boutons.scss
@@ -3,15 +3,17 @@
   margin: 0 auto;
   display: flex;
   justify-content: flex-end;
+  font-size: 30px;
+  color: white;
 }
 .btn-home {
   margin: 10px;
-  padding: 50px;
+  padding: 60px;
+  color: white;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
-  color: white;
  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
   box-shadow: 0 0 20px #eee;
   border-radius: 50px;
