text une nouvelle approche de la médecine qui reste juste sur la page home

--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -9,6 +9,7 @@
         width: 430px;
         margin: 0 auto;
         font-family: 'Raleway', sans-serif;
+        padding-bottom: 50px;
     }
     
     &__title {
@@ -25,18 +26,3 @@
 }
 
 
-.credits {
-    &__container {
-        margin-top: 24px;
-    }
-    
-    &__text {
-        text-align: center;
-    }
-
-    &__secte {
-        text-align: center;
-        font-size: 13px;
-        line-height: 18px;
-    }
-}
