couleur footer + background

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,5 @@
-html {
-    height: 100%;
-  }
-
-body{
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-    background-size: cover;
-    color: white;
-  }
+body {
+height: 100%;
+background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616004050/Photos%20Pros/Background-home_kavy6n.jpg);
+background-size: cover;
+}
