--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,21 +1,22 @@
 
 .footer {
-  background: #F4F4F4;
+  background: transparent;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: lightgrey;
   bottom: 0;
   width: 100%; height: 50px;
+  opacity: 70px;
 }
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: lightgrey;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
