solution pour backgrounds

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-
+<body class="home">
 <div class="container-home">
 <div class="home-banner">
   <h1>Avec Parallel, une autre vision de la médecine</h1>
@@ -18,4 +18,4 @@
 
 </div>
  </div>
-</div>
+</body>
