--- a/app/assets/stylesheets/components/_backgrounds.scss
+++ b/app/assets/stylesheets/components/_backgrounds.scss
@@ -1,4 +1,4 @@
-body.home {
+body {
 background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616004050/Photos%20Pros/Background-home_kavy6n.jpg);
 background-size: cover;
 }
