ajout des pages index et show avec fond

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,2 +1,17 @@
-index.html.erb
+<body class="activities">
+  <div class="container-activities">
+<div class="info-activities">
 <h1> Coucou </h1>
+</div>
+<div class=btn-activies>
+<a href="/categories/1/activities/2" class="btn-home btn-1">DECOUVRIR</a>
+<a href="/" class="btn-home btn-2">HYPNOSE</a>
+<a href="/" class="btn-home btn-3">NATUROPATHIE</a>
+<a href="/" class="btn-home btn-4">MAGNETISME</a>
+<a href="/" class="btn-home btn-5">SOPHROLOGIE/</a>
+</div>
+</div>
+</body>
+
+
+
