--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,8 @@ body.home {
 background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616004050/Photos%20Pros/Background-home_kavy6n.jpg);
 background-size: cover;
 }
+
+body.activities {
+  background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616012887/Photos%20Pros/Background-activities_svz2gf.jpg);
+background-size: cover;
+}
