--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -5,18 +5,7 @@
       <h2>Trou du Q name</h2>
       <p>Hypnose <strong>Ericksonienne</strong></p>
       <p>J'adore la vie </p>
-      <%= link_to "Prendre RDV", "/ruby-book" %>
-    </div>
-  </div>
-  <div class="praticien-card">
-    <img class="avatar-bordered" alt="avatar-bordered" src="https://kitt.lewagon.com/placeholder/users/sarahlafer" />
-    <div class="praticien-infos">
-      <h2>Trou du Q name</h2>
-      <p>Hypnose <strong>Ericksonienne</strong></p>
-      <p>J'adore la vie </p>
-      <%= link_to "Prendre RDV", "/ruby-book" %>
+      <%= link_to "Prendre RDV", "/cabinets/:id" %>
     </div>
   </div>
 </div>
-
-
