--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,10 +1,14 @@
 <div class="search__container">
     <p class="search__title">
-        Je trouve mon practicien
+      Je trouve mon practicien
     </p>
     <div class="searchbar">
-        <input class="search__input" type="text" placeholder="Practicien">
+        <input class="search__input" type="text" placeholder="Pratique">
         <input class="search__input" type="text" placeholder="Localisation">
-        <button type="submit"><i class="fa fa-search"></i></button>
+        <button type="submit"><i class="btn btn-outline-dark fa fa-leaf"></i></button>
+
     </div>
 </div>
+
+
+
