--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -7,21 +7,30 @@
 .search {
     &__container {
         padding-top: 64px;
-        width: 430px;
-        margin: 0 auto;
+        width: 450px;
+        margin: 20px;
         font-family: 'Raleway', sans-serif;
         padding-bottom: 50px;
+
     }
-    
+
     &__title {
         font-size: 22px;
-        font-weight: 900;
         text-align: center;
-        color: #000000;
-    }       
-}  
+        color: white;
+        margin: 10px;
+        margin-right: 180px;
+    }
+
+    &__input {
+    padding-left: 50px;
+}
+}
+
 
 .searchbar {
     display: flex;
     flex-direction: row;
 }
+
+
