--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,10 +1,12 @@
 .container-home {
-  height: 100vh;
+  height: 90vh;
   display: flex;
+  margin-left: 96px;
+  margin-right: 96px;
    h1 {
   color: white;
   text-align: center;
-  margin-top: 80px;
+  margin-top: 60px;
    }
   p {
   color: white;
@@ -16,11 +18,22 @@
     color: white;
     margin-left: 50px;
     margin-top: 60px;
-
+    text-align: center;
    }
 
     h3 {
     color: white;
     text-align: center;
    }
+  }
+
+  .boutons-home {
+    display: flex;
+    flex-direction: row;
+    padding-top: 40px;
+    h3 {
+      padding-right: 200px;
+      padding-left: 200px;
+      padding-top: 50px;
+    }
   }
