--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -8,7 +8,7 @@
 <a href="/" class="btn-home btn-2">HYPNOSE</a>
 <a href="/" class="btn-home btn-3">NATUROPATHIE</a>
 <a href="/" class="btn-home btn-4">MAGNETISME</a>
-<a href="/" class="btn-home btn-5">SOPHROLOGIE/</a>
+<a href="/" class="btn-home btn-5">SOPHROLOGIE</a>
 </div>
 </div>
 </body>
