--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -1,3 +1,4 @@
+<body class="health">
 <div class="praticiens-container">
   <div class="praticien-card">
     <img class="avatar-bordered" alt="avatar-bordered" src="https://kitt.lewagon.com/placeholder/users/sarahlafer" />
@@ -18,3 +19,4 @@
     </div>
   </div>
 </div>
+</body>
