--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -1,3 +1,4 @@
+<body class="health">
 <div>
   <%= calendar(number_of_days: 7) do |date| %>
     <%= date %>
@@ -33,3 +34,4 @@
     <% end %>
   <% end %>
 </div>
+</body>
