--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,11 @@ body.activities {
 background-size: cover;
 }
 
+body.health {
+background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616069316/Photos%20Pros/Background-cabinet_ojsdex.jpg);
+background-size: cover;
+}
+
 body{
     min-height: 100%;
     margin: 0;
