ajout de la navbar sur la page home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,10 +6,7 @@
   <h1>Avec Parallel, une autre vision de la médecine</h1>
   <p> Avec Parallel, une autre vision de la médecineAvec Parallel, une autre vision de la médecine </p>
   <div class="search-bar-home">
-    <h2> Je trouve mon practicien </h2>
-
-
-
+    <%= render 'shared/searchbar' %>
 </div>
  <div class="boutons-home">
   <h3> Découvrez de nouvelles pratiques en toute confiance avec Parallel</h3>
