--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -23,3 +23,5 @@ $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
 // Override other variables below!
+$modal-fade-transform: scale(.8);
+// $modal-transition-transform: all 0.5s cubic-bezier(.37,-0.79,.67,1.45);
