--- a/app/assets/stylesheets/components/_boutons.scss
+++ b/app/assets/stylesheets/components/_boutons.scss
@@ -59,3 +59,14 @@
   width: 100%;
 }
 
+.calendarbutton2 {
+  width: 100%;
+  pointer-events: none;
+  background-color: #A46658;
+  border-radius: 0px;
+  border: 0px;
+}
+
+.bookedbutton {
+  background-color: red;
+}
