--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -1,9 +1,19 @@
+
+
+
+
+<!-- WARNING : CODE DU CALENDRIER CI-DESSOUS / DON'T TOUCH / ONLY FOR CSS CLASS -->
+
 <div>
   <%= calendar(number_of_days: 7) do |date| %>
     <%= date %>
     <% hour = 8 %>
     <% 10.times do %>
+    <% if Reservation.where(start_time: date + hour.hours).exists? %>
+        <button type="button" class="btn calendarbutton2"><p>Réservé</p></button>
+        <% else %>
         <button type="button" class="btn btn-light calendarbutton" data-toggle="modal" data-target="#exampleModal-<%= date %>-<%= hour %>"><p><%= hour %>h - <%= hour + 1 %>h</p></button>
+        <% end %>
         <div class="modal fade" id="exampleModal-<%= date %>-<%= hour %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -23,7 +33,7 @@
                 <%= simple_form_for [ @cabinet, @reservation ] do |f| %>
                   <%= f.input :start_time, as: :hidden, input_html: { value: date.to_datetime + hour.hours }%>
                   <%= f.input :end_time, as: :hidden, input_html: { value: date.to_datetime + (hour + 1).hours } %>
-                  <%= f.submit 'Confirmer' %>
+                  <%= f.submit 'Confirmer', class: "btnSubmit" %>
                 <% end %>
               </div>
             </div>
@@ -33,3 +43,5 @@
     <% end %>
   <% end %>
 </div>
+
+<!-- WARNING : CODE DU CALENDRIER CI-DESSUS / DON'T TOUCH / ONLY FOR CSS CLASS -->
