--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -1,11 +1,16 @@
-<div class="praticiens-container">
-  <div class="praticien-card">
-    <img class="avatar-bordered" alt="avatar-bordered" src="https://kitt.lewagon.com/placeholder/users/sarahlafer" />
-    <div class="praticien-infos">
-      <h2>Trou du Q name</h2>
-      <p>Hypnose <strong>Ericksonienne</strong></p>
-      <p>J'adore la vie </p>
-      <%= link_to "Prendre RDV", "/cabinets/:id" %>
+<div class="big-praticien-container">
+  <div class="praticiens-container">
+    <% @cabinets.each do |cabinet| %>
+    <div class="praticien-card">
+      <div class="p-avatar">
+        <%= cl_image_tag cabinet.photo.key %>
+      </div>
+      <div class="praticien-infos">
+        <h2> <%= cabinet.name %> </h2>
+        <p> <%= cabinet.description %> </p>
+        <%= link_to "Prendre RDV", "/cabinets/:id" %>
+      </div>
     </div>
+    <% end %>
   </div>
 </div>
