--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -45,3 +45,5 @@
 </div>
 
 <!-- WARNING : CODE DU CALENDRIER CI-DESSUS / DON'T TOUCH / ONLY FOR CSS CLASS -->
+
+<!-- WARNING : Ci dessous se trouve le code du calendrier -->
