intégration de la maquette Figma sur la show activities

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -37,3 +37,17 @@
       padding-top: 50px;
     }
   }
+
+.show-banner-activities {
+  color: black;
+  padding-left: 70px;
+  p {
+    padding-left: 30px;
+    padding-right: 600px;
+  }
+  hr {
+    border-width: thin;
+    border-color: black;
+    margin-right: 70px;
+  }
+}
