--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,3 +1,13 @@
 <body class="activities">
-  <h1> hypnose </h1>
+  <div class="container-show-activities">
+      <%= render 'shared/searchbar' %>
+    <div class="show-banner-activities">
+      <h1> hypnose </h1>
+      <hr />
+      <div class="show-text-activities">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim vestibulum sollicitudin. Pellentesque tincidunt augue tortor, et commodo nunc scelerisque vitae. Etiam condimentum ligula mollis justo sollicitudin consectetur. Fusce facilisis lectus sed arcu maximus porttitor. In suscipit condimentum dui et sodales. Mauris semper mattis efficitur. Fusce a lacus lobortis, fermentum ligula vitae, elementum enim. Duis ut lacus ac odio pretium finibus a vehicula risus. Sed eget turpis rhoncus, lacinia risus quis, condimentum mi. Cras elit purus, faucibus vitae dolor ut, imperdiet auctor tellus. Phasellus suscipit rhoncus est ut vulputate. Quisque viverra lobortis fermentum. Proin pulvinar non purus pharetra laoreet.</p>
+        <p>Aliquam iaculis augue mollis mauris pretium condimentum. Aenean sollicitudin sed dolor eu gravida. Nulla sed ipsum feugiat, fermentum ligula sit amet, dictum enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque vulputate nisi, hendrerit auctor nibh accumsan imperdiet. Nullam cursus commodo eleifend. Cras lobortis viverra nibh, sed semper massa lacinia vitae. Suspendisse tincidunt nulla nunc, vel facilisis ligula fermentum in. Donec aliquam lobortis risus, quis ultricies orci laoreet ac.</p>
+     </div>
+    </div>
+  </div>
 </body>
