--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -43,3 +43,7 @@
 <!-- WARNING : CODE DU CALENDRIER CI-DESSUS / DON'T TOUCH / ONLY FOR CSS CLASS -->
 
 <!-- WARNING : Ci dessous se trouve le code du calendrier -->
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['pk.eyJ1IjoiZ29sZGVuZWFnbGVzMzMzIiwiYSI6ImNrbGtwcWNuMTI0ZmgydnByanQwYzJtYWMifQ.m5n7IkJitqxnmwfcfHTLAw'] %>"></div>
