--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -1,17 +1,20 @@
+<%= render 'shared/searchbar' %>
 
-<div class="big-praticien-container">
-  <div class="praticiens-container">
-    <% @cabinets.each do |cabinet| %>
-    <div class="praticien-card">
-      <div class="p-avatar">
-        <%= cl_image_tag cabinet.photo.key %>
+<body class="health">
+  <div class="big-praticien-container">
+    <div class="praticiens-container">
+      <% @cabinets.each do |cabinet| %>
+      <div class="praticien-card">
+        <div class="p-avatar">
+          <%= cl_image_tag cabinet.photo.key %>
+        </div>
+        <div class="praticien-infos">
+          <h2> <%= cabinet.name %> </h2>
+          <p> <%= cabinet.description %> </p>
+          <%= link_to "Prendre RDV", "/cabinets/:id" %>
+        </div>
       </div>
-      <div class="praticien-infos">
-        <h2> <%= cabinet.name %> </h2>
-        <p> <%= cabinet.description %> </p>
-        <%= link_to "Prendre RDV", "/cabinets/:id" %>
-      </div>
+      <% end %>
     </div>
-    <% end %>
   </div>
-</div>
+</body>
