--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,4 +1,4 @@
-<body class="activities">
+<div class="activities">
 
   <%= render 'shared/searchbar' %>
 
@@ -8,18 +8,18 @@
 
 
 <div class="info-activities">
-<h2> Quelques petits mots explicatifs sur la démarche somme toute très intéressante concernant toutes les médecines parallèles que nous présentons </h2>
+<h2> Quelques petits mots explicatifs sur la démarche somme <br> toute très intéressante concernant toutes les <br> médecines parallèles que nous présentons </h2>
 </div>
 
-<div class=btn-activies>
-<a href="/categories/1/activities/2" class="btn-home btn-5">HYPNOSE</a>
-<a href="/" class="btn-home btn-4">RADIESTHESIE</a>
-<a href="/" class="btn-home btn-3">NATUROPATHIE</a>
-<a href="/" class="btn-home btn-4">MAGNETISME</a>
-<a href="/" class="btn-home btn-5">SOPHROLOGIE</a>
+<div class=boutons-activities>
+<a href="/categories/1/activities/4" class="btn-activities btn-1">HYPNOSE</a>
+<a href="/" class="btn-activities btn-2">RADIESTHESIE</a>
+<a href="/" class="btn-activities btn-3">NATUROPATHIE</a>
+<a href="/" class="btn-activities btn-4">MAGNETISME</a>
+<a href="/" class="btn-activities btn-5">SOPHROLOGIE</a>
 </div>
 </div>
-</body>
+</div>
 
 
 
