--- a/app/assets/stylesheets/components/_boutons.scss
+++ b/app/assets/stylesheets/components/_boutons.scss
@@ -7,6 +7,36 @@
   color: white;
 }
 .btn-home {
+  height: 200px;
+  min-width: 200px;
+  margin: 10px;
+  color: white;
+  text-transform: uppercase;
+  transition: 0.5s;
+  /*background-size: 200% auto;
+ /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+  box-shadow: 0 0 20px #eee;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+
+
+
+
+ .boutons-activies {
+   width: 80vw;
+  margin: 0 auto;
+  display: flex;
+  font-size: 30px;
+  color: white;
+  position: relative;
+
+
+ }
+
+ .btn-activities {
   margin: 10px;
   padding: 60px;
   color: white;
@@ -17,11 +47,38 @@
  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
   box-shadow: 0 0 20px #eee;
   border-radius: 50px;
+  position: absolute;
+  &.btn-1 {
+    right: 200px;
+    bottom: 100px;
+  }
+    &.btn-2 {
+    right: 300px;
+    bottom:200px
+
+  }
+    &.btn-3 {
+    right: 400px;
+    bottom: 110px;
+  }
+    &.btn-5 {
+    right: 250px;
+    bottom: 10px;
+  }
+     &.btn-4 {
+    right: 400px;
+    bottom: 30px;
+  }
+
  }
 
- .btn-activies {
 
- }
+
+ .btn-activities:hover {
+  color: white;
+  text-decoration: none;
+  background-position: right center; /* change the direction of the change here */
+}
 
 /* Demo Stuff End -> */
 
