--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,12 +4,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
   padding: 0px 50px;
   color: lightgrey;
   bottom: 0;
-  width: 100%; height: 50px;
-  opacity: 70px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  opacity: 80%;
+
 }
 .footer-links {
   display: flex;
