--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -1,4 +1,5 @@
 
+<div class=health>
 <div class="big-praticien-container">
   <div class="praticiens-container">
     <% @cabinets.each do |cabinet| %>
@@ -14,4 +15,5 @@
     </div>
     <% end %>
   </div>
+</div>
 
