--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -1,6 +1,5 @@
 
-<body class="health">
-
+<div class="health">
 
 
 <!-- WARNING WARNING WARNING DON'T TOUCH THE CODE-->
@@ -41,7 +40,7 @@
   <% end %>
 </div>
 
-</body>
+</div>
 <!-- Fin du code du calendrier (copier le code avec les commentaires) -->
 
 
