--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<body class="home">
+<div class="home">
 
 <div class="container-home">
 <div class="home-banner">
@@ -15,4 +15,4 @@
 
 </div>
  </div>
-</body>
+</div>
