--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -46,4 +46,4 @@
 <div id="map"
      style="width: 100%; height: 600px;"
      data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['pk.eyJ1IjoiZ29sZGVuZWFnbGVzMzMzIiwiYSI6ImNrbGtwcWNuMTI0ZmgydnByanQwYzJtYWMifQ.m5n7IkJitqxnmwfcfHTLAw'] %>"></div>
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
