--- a/app/assets/stylesheets/components/_boutons.scss
+++ b/app/assets/stylesheets/components/_boutons.scss
@@ -37,8 +37,9 @@
  }
 
  .btn-activities {
+  height: 200px;
+  min-width: 200px;
   margin: 10px;
-  padding: 60px;
   color: white;
   text-align: center;
   text-transform: uppercase;
@@ -46,9 +47,13 @@
   background-size: 200% auto;
  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
   box-shadow: 0 0 20px #eee;
-  border-radius: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   &.btn-1 {
+
     right: 200px;
     bottom: 100px;
   }
