changement des routes/réorganisation de la base de données

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 </div>
  <div class="boutons-home">
   <h3> Découvrez de nouvelles pratiques en toute confiance avec Parallel</h3>
-  <a href="/categories/1/activities" class="btn-home btn-2">DECOUVRIR</a>
+  <a href="/activities" class="btn-home btn-2">DECOUVRIR</a>
 </div>
 
 </div>
