--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -12,11 +12,11 @@
 </div>
 
 <div class=boutons-activities>
-<a href="/categories/1/activities/4" class="btn-activities btn-1">HYPNOSE</a>
-<a href="/" class="btn-activities btn-2">RADIESTHESIE</a>
-<a href="/" class="btn-activities btn-3">NATUROPATHIE</a>
-<a href="/" class="btn-activities btn-4">MAGNETISME</a>
-<a href="/" class="btn-activities btn-5">SOPHROLOGIE</a>
+<a href="/activities/1" class="btn-activities btn-1">HYPNOSE</a>
+<a href="/activities/2" class="btn-activities btn-2">RADIESTHESIE</a>
+<a href="/activities/3" class="btn-activities btn-3">NATUROPATHIE</a>
+<a href="/activities/4" class="btn-activities btn-4">MAGNETISME</a>
+<a href="/activities/5" class="btn-activities btn-5">SOPHROLOGIE</a>
 </div>
 </div>
 </div>
