--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,12 +1,12 @@
-<div class="search__container">
-    <p class="search__title">
-      Je trouve mon practicien
-    </p>
-    <div class="searchbar">
-        <input class="search__input" type="text" placeholder="Pratique">
-        <input class="search__input" type="text" placeholder="Localisation">
-        <button type="submit"><i class="btn btn-outline-dark fa fa-leaf"></i></button>
 
-    </div>
+<div class="search__container">
+  <p class="searchtext">Je trouve mon practicien </p>
+   <div class="search1">
+      <input type="text" class="searchTerm" placeholder="Medecine">
+      <input type="text" class="searchTerm2" placeholder="Localisation">
+      <button type="submit" class="searchButton">
+        <i class="fa fa-search"></i>
+     </button>
+   </div>
 </div>
 
