--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -4,33 +4,68 @@
 
 /* Base styling */
 
-.search {
-    &__container {
-        width: 450px;
-        margin: 20px;
-        font-family: 'Raleway', sans-serif;
-        padding-bottom: 50px;
-
-    }
-
-    &__title {
-        font-size: 22px;
-        text-align: center;
-        color: white;
-        margin: 10px;
-        margin-right: 180px;
-    }
-
-    &__input {
-    padding-left: 50px;
-}
-}
-
 
 .searchbar {
     display: flex;
     flex-direction: row;
 }
 
+.searchtext {
+  display:flex;
+   justify-content: flex-start;
+}
 
+.search1 {
+  width: 100%;
+  position: relative;
+  display: flex;
 
+}
+
+.searchTerm {
+  width: 300px;
+  border: 3px solid white;
+  border-right: none;
+  padding: 15px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm2 {
+  width: 300px;
+  border: 3px solid white;
+  border-right: none;
+  padding: 15px;
+  height: 20px;
+
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid white;
+  background: white;
+  opacity: 60%;
+  text-align: center;
+  color: black;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
