--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,12 +7,17 @@
   color: white;
   text-align: center;
   margin-top: 60px;
+  margin-bottom: 100px;
+  display: flex;
+  align-content: flex-end;
    }
-  p {
+  /* p {
   color: white;
   text-align: center;
   margin-top: 30px;
-   }
+  display: flex;
+  align-content: flex-end;
+   } */
 
    h2 {
     color: white;
@@ -27,16 +32,6 @@
    }
   }
 
-  .boutons-home {
-    display: flex;
-    flex-direction: row;
-    padding-top: 40px;
-    h3 {
-      padding-right: 200px;
-      padding-left: 200px;
-      padding-top: 50px;
-    }
-  }
 
 .show-banner-activities {
   color: black;
