--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,13 +1,16 @@
 <div class="activities">
 
-  <%= render 'shared/searchbar' %>
 
-  <h1> Ce que proposent nos professionnels de santé:</h1>
+
 
   <div class="container-activities">
-
+    <div class="banner-activities">
+       <h1>Avec Parallel, une autre vision de la médecine</h1>
+ <%= render 'shared/searchbar' %>
+</div>
 
 <div class="info-activities">
+   <h1> Ce que proposent nos professionnels de santé:</h1>
 <h2> Quelques petits mots explicatifs sur la démarche somme <br> toute très intéressante concernant toutes les <br> médecines parallèles que nous présentons </h2>
 </div>
 
