résolution pb cards

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,4 +1,4 @@
-<body class="activities">
+<div class="activities">
   <div class="container-show-activities">
       <%= render 'shared/searchbar' %>
     <div class="show-banner-activities">
@@ -10,4 +10,4 @@
      </div>
     </div>
   </div>
-</body>
+</div>
