--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,27 +1,23 @@
 <div class="activities">
-
-
-
-
   <div class="container-activities">
     <div class="banner-activities">
        <h1>Avec Parallel, une autre vision de la médecine</h1>
- <%= render 'shared/searchbar' %>
-</div>
+        <%= render 'shared/searchbar' %>
+    </div>
 
-<div class="info-activities">
-   <h1> Ce que proposent nos professionnels de santé:</h1>
-<h2> Quelques petits mots explicatifs sur la démarche somme <br> toute très intéressante concernant toutes les <br> médecines parallèles que nous présentons </h2>
-</div>
+    <div class="info-activities">
+      <h1> Ce que proposent nos professionnels de santé:</h1>
+      <h2> Quelques petits mots explicatifs sur la démarche somme <br> toute très intéressante concernant toutes les <br> médecines parallèles que nous présentons </h2>
+    </div>
 
-<div class=boutons-activities>
-<a href="/activities/1" class="btn-activities btn-1">HYPNOSE</a>
-<a href="/activities/2" class="btn-activities btn-2">RADIESTHESIE</a>
-<a href="/activities/3" class="btn-activities btn-3">NATUROPATHIE</a>
-<a href="/activities/4" class="btn-activities btn-4">MAGNETISME</a>
-<a href="/activities/5" class="btn-activities btn-5">SOPHROLOGIE</a>
-</div>
-</div>
+    <div class=boutons-activities>
+      <% i = 1 %>
+      <% @activities.each do |activity| %>
+        <%= link_to activity.name, activity_path(activity), class: "btn-activities btn-#{i}"  %>
+        <% i += 1 %>
+      <% end %>
+    </div>
+  </div>
 </div>
 
 
