--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -8,4 +8,5 @@
       <p>Aliquam iaculis augue mollis mauris pretium condimentum. Aenean sollicitudin sed dolor eu gravida. Nulla sed ipsum feugiat, fermentum ligula sit amet, dictum enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque vulputate nisi, hendrerit auctor nibh accumsan imperdiet. Nullam cursus commodo eleifend. Cras lobortis viverra nibh, sed semper massa lacinia vitae. Suspendisse tincidunt nulla nunc, vel facilisis ligula fermentum in. Donec aliquam lobortis risus, quis ultricies orci laoreet ac.</p>
     </div>
   </div>
+  <%= link_to 'Back', activities_path %>
 </div>
