--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -5,22 +5,18 @@
 /* Base styling */
 
 
-.searchbar {
-    display: flex;
-    flex-direction: row;
-}
-
-.searchtext {
-  display:flex;
-   justify-content: flex-start;
-}
-
 .search1 {
   width: 100%;
   position: relative;
   display: flex;
-
 }
+
+.search2 {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
 
 .searchTerm {
   width: 300px;
