--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,6 +8,6 @@
   </div>
 
   <div class="footer-copyright">
-    This is a fucking website made by freaking bitches
+    This is a fucking website
   </div>
 </div>
