--- a/app/assets/stylesheets/components/_boutons.scss
+++ b/app/assets/stylesheets/components/_boutons.scss
@@ -17,16 +17,15 @@
   color: white;
   text-transform: uppercase;
   transition: 0.5s;
-  /*background-size: 200% auto;
+  background-size: 200% auto;
  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
   box-shadow: 0 0 20px #eee;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 90%;
  }
-
-
 
 
  .boutons-activies {
@@ -101,6 +100,8 @@
   color: white;
   text-decoration: none;
   background-position: right center;/* change the direction of the change here */
+  transition: 1s ease-in-out;
+  opacity: 100%;
 }
 
 .btn-1 {
