--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,8 +1,17 @@
+.mapboxgl-popup-tip {
+}
+
 .mapboxgl-popup {
   max-width: 200px;
+
 }
 
 .mapboxgl-popup-content {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+  background-color: white;
+  color: black;
+  border-radius: 50%;
+  border-color: black;
 }
+
