--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container-activities">
     <div class="banner-activities">
        <h1>Avec Parallel, une autre vision de la médecine</h1>
-        <%= render 'shared/searchbar' %>
+        <%= render 'shared/searchbaractivities' %>
     </div>
 
     <div class="info-activities">
