--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,13 +11,13 @@
   display: flex;
   align-content: flex-end;
    }
-  /* p {
+  p {
   color: white;
   text-align: center;
   margin-top: 30px;
   display: flex;
   align-content: flex-end;
-   } */
+   }
 
    h2 {
     color: white;
