--- a/app/views/shared/_searchbaractivities.html.erb
+++ b/app/views/shared/_searchbaractivities.html.erb
@@ -1,6 +1,7 @@
-<div class="search__container">
-  <p class="searchtext">Je trouve mon practicien </p>
+<div class="search__container2">
+  <p>Je trouve mon practicien </p>
    <div class="search2">
+
       <input type="text" class="searchTerm" placeholder="Medecine">
       <input type="text" class="searchTerm2" placeholder="Localisation">
       <button type="submit" class="searchButton">
