--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,8 +1,15 @@
 .info-activities h2 {
-  display: flex;
-  margin:30px;
+    display: flex;
+    margin-left: 54px;
+    margin-top: 88px;
+    margin-right: 353px;
+    font-size: 30px;
 }
 
+.info-activities h1 {
+  margin-left: 30px;
+
+}
 
   .boutons-home {
     h3 {
