--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -7,7 +7,7 @@
 
     <div class="info-activities">
       <h1> Ce que proposent nos professionnels de santé:</h1>
-      <h2> Quelques petits mots explicatifs sur la démarche somme <br> toute très intéressante concernant toutes les <br> médecines parallèles que nous présentons </h2>
+      <h2> Quelques petits mots explicatifs sur la démarche <br> très intéressante concernant toutes les <br> médecines parallèles que nous présentons </h2>
     </div>
 
     <div class=boutons-activities>
