--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,5 +1,5 @@
 .calendcontainer {
-    width: 65%; /* On a indiqué une largeur (obligatoire) */
+    width: 100px; /* On a indiqué une largeur (obligatoire) */
     margin: auto; /* On peut donc demander à ce que le bloc soit centré avec auto */
     text-align: justify;
     margin-bottom: 20px;
