--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -53,3 +53,27 @@
   border-radius: 50%;
 }
 
+.container-cabinet-show {
+  display: flex;
+  justify-content: center;
+}
+
+.card-show-cabinet {
+  height: 500px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 100px;
+  margin-top: 50px;
+}
+
+.practicien-card-show {
+  background: transparent;
+  height: 175px;
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
