--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/searchbar' %>
+<%= render 'shared/searchbarhealt' %>
 
 <div class=health>
   <div class="big-praticien-container">
