fin backgrounds et buttons

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -9,7 +9,10 @@
 .info-activities h3 {
   margin-left: 30px;
   font-size: 30px;
+}
 
+.info-activities {
+  padding-top: 40px;
 }
 
   .boutons-home {
