--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
     <%= render 'shared/searchbar' %>
 </div>
  <div class="boutons-home">
-  <h3> Découvrez de nouvelles pratiques en toute confiance avec Parallel</h3>
+  <h3> Des doutes? Des questions ? <br> Découvrez de nouvelles pratiques en toute confiance</h3>
   <a href="/activities" class="btn-home btn-2">DECOUVRIR</a>
 </div>
 
